# connect-four-ai-bot

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
